--- a/index.html
+++ b/index.html
@@ -5,3 +5,8 @@
 layout: home
 author_profile: true
 ---
+<style>
+    .page__title a {
+        text-decoration: underline !important;
+    }
+</style>
