--- a/_pages/uploaded-documents.html
+++ b/_pages/uploaded-documents.html
@@ -1,7 +1,7 @@
 ---
 title: "Uploaded Documents"
 permalink: /uploaded-documents/
-layout: upload_documents
+layout: uploaded_documents
 classes:
   - wide
 author_profile: true
