--- a/_pages/uploaded-documents.html
+++ b/_pages/uploaded-documents.html
@@ -35,7 +35,7 @@ author_profile: true
   }
 </style>
 
-{% for docs in site.data.upload_documents.files %}
+{% for docs in site.data.uploaded_documents.files %}
   {% if docs.title %}
     <h1>{{ docs.title }}</h1>
   {% endif %}
