--- a/_pages/uploaded-documents.html
+++ b/_pages/uploaded-documents.html
@@ -42,13 +42,12 @@ author_profile: true
   {% if docs.summary %}
     <p>{{ docs.summary }}</p>
   {% endif %}
-  <br>
   {% if docs.link %}
   <span style="display: flex; flex-direction: row; column-gap: 50px;">
     <button id="preview-button">
       <i class="fas fa-file-pdf"></i><span> Preview</span>
     </button>
-    <a href="{{ site.baseurl }}/assets/presentation/{{ docs.link }}" target="_blank">
+    <a href="{{ site.baseurl }}/assets/presentations/{{ docs.link }}" target="_blank" download>
       <button id="download-button">
         <i class="fas fa-download"></i><span> Download PDF</span>
       </button>
@@ -58,7 +57,7 @@ author_profile: true
   <div id="pdf-lightbox" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.8); z-index: 1000; justify-content: center; align-items: center;">
     <div style="position: relative; width: 80%; height: 80%;">
       <button id="close-lightbox" style="position: absolute; top: 10px; right: -50px; background: transparent; border: none; padding: 10px; cursor: pointer;"><i class="far fa-window-close"></i></button>
-      <object data="{{ site.baseurl }}/assets/presentation/{{ docs.link }}" width="100%" height="100%" type="application/pdf" style="border: 1px solid #ccc;"></object>
+      <object data="{{ site.baseurl }}/assets/presentations/{{ docs.link }}" width="100%" height="100%" type="application/pdf" style="border: 1px solid #ccc;"></object>
     </div>
   </div>
   {% endif %}
