--- a/_pages/uploaded-documents.html
+++ b/_pages/uploaded-documents.html
@@ -33,15 +33,24 @@ author_profile: true
   .close-lightbox:hover{
     color: #c3c0c0;
   }
+  ul li::marker{
+    color: grey;
+    font-size: 20px;
+  }
 </style>
 
-{% for docs in site.data.uploaded_documents.files %}
+<ul>
+  <li>
+    {% for docs in site.data.uploaded_documents.files %}
   {% if docs.title %}
     <h1>{{ docs.title }}</h1>
   {% endif %}
   {% if docs.summary %}
     <p>{{ docs.summary }}</p>
   {% endif %}
+  {% if docs.date %}
+  <p style="color: gray;"><i class="fas fa-calendar-plus"></i> Date Uploaded: {{ docs.date | "%-d %B %Y" }}</p>
+{% endif %}
   {% if docs.link %}
   <span style="display: flex; flex-direction: row; column-gap: 50px;">
     <button id="preview-button">
@@ -54,7 +63,7 @@ author_profile: true
     </a>
   </span>
   <!-- Lightbox for PDF -->
-  <div id="pdf-lightbox" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.8); z-index: 1000; justify-content: center; align-items: center;">
+  <div id="pdf-lightbox" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.8); z-index: 100000; justify-content: center; align-items: center;">
     <div style="position: relative; width: 80%; height: 80%;">
       <button id="close-lightbox" style="position: absolute; top: 10px; right: -50px; background: transparent; border: none; padding: 10px; cursor: pointer;"><i class="far fa-window-close"></i></button>
       <object data="{{ site.baseurl }}/assets/presentations/{{ docs.link }}" width="100%" height="100%" type="application/pdf" style="border: 1px solid #ccc;"></object>
@@ -62,6 +71,8 @@ author_profile: true
   </div>
   {% endif %}
 {% endfor %}
+  </li>
+</ul>
 
 
 
