--- a/_pages/uploaded-documents.html
+++ b/_pages/uploaded-documents.html
@@ -49,7 +49,7 @@ author_profile: true
     <p>{{ docs.summary }}</p>
   {% endif %}
   {% if docs.date %}
-  <p style="color: gray;"><i class="fas fa-calendar-plus"></i> Date Uploaded: {{ docs.date | "%B %d, %Y" }}</p>
+  <p style="color: gray;"><i class="fas fa-calendar-plus"></i> Date Uploaded: {{ docs.date | date: "%B %d, %Y" }}</p>
 {% endif %}
   {% if docs.link %}
   <span style="display: flex; flex-direction: row; column-gap: 50px;">
